buildscript {
    repositories {
        maven { url "https://plugins.gradle.org/m2/" }
    }
}

plugins {
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
    id 'war'
}

group = 'cz.cvut.kbss.analysis'
version = '0.0.1-SNAPSHOT'

compileJava {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

repositories {
    mavenCentral()
    maven{
        url "https://oss.sonatype.org/content/repositories/snapshots"
        mavenContent {
            snapshotsOnly()
        }
    }
}

war {
    enabled = true
}

sourceSets.main.java.srcDirs += "src/main/generated"

dependencies {
    def jopaVersion = '2.0.0-SNAPSHOT'
    implementation "cz.cvut.kbss.jopa:jopa-impl:$jopaVersion"
    implementation "cz.cvut.kbss.jopa:ontodriver-rdf4j:$jopaVersion"
    implementation 'cz.cvut.kbss.jsonld:jb4jsonld-jackson:0.13.2'
    implementation 'com.github.ledsoft:jopa-spring-transaction:0.3.0-SNAPSHOT'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    implementation 'com.fasterxml:classmate:1.5.0'
    implementation 'com.opencsv:opencsv:5.3'

    implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    providedRuntime 'jakarta.servlet:jakarta.servlet-api'

    implementation 'javax.xml.bind:jaxb-api:2.3.1' // needed for java 17

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.springframework.security:spring-security-test'
}

test {
    useJUnitPlatform()
}